# movie-watching-insights

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.in
src/mwi/: __init__.py  cli.py  log.py
src/mwi/etl/: fuse_master.py  imdb_dump.py
